# reasig-onboarding-design-patterns

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
src/design_patterns_example_runner/: __init__.py  main.py
src/design_patterns_example_runner/patterns/: __init__.py  abstract_factory.py  adapter.py  bridge.py  builder.py  chain-of-responsibility.py  command.py  composite.py  decorator.py  facade.py  factory_method.py  flyweight.py  iterator.py  mediator.py  memento.py  observer.py  prototype.py  proxy.py  singleton.py  state.py  strategy.py  template_method.py  visitor.py
tests/: test_patterns_run.py
